{
    "name": "MenuInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "0aed571d-02f0-4706-8d43-de19f835a2ab",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "42f8f6b7-4d06-4561-b363-d51976d56f08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "BackB",
                    "type": "Button",
                    "id": "9c7000a3-8fe3-4724-b139-7a35a04cc150",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "16f31004-8aba-4087-9e18-3f522578f0ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Cursor",
                    "type": "Value",
                    "id": "d9269bf1-8293-47d2-93e7-f85b1119c6ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseSelect",
                    "type": "Button",
                    "id": "64b719fb-cbcd-4941-855c-b2e345865bb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5706650d-fe7d-4f09-bc20-fddb6249117a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "133bb6c3-e43e-435f-ac57-930f30599a4e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08da1485-2b74-46d4-90fe-af89a90fab23",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5a17607-55bd-46d2-b2d5-6967f86bc892",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e5f07ae-c2ac-411e-bdc2-e87b3ffd0f0d",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cee3014-c592-4572-9aff-5e1c7a7aaa5a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2847a3e6-9462-49d8-9203-c601848d14c7",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72cad36b-8f5f-4a3b-89a5-6e1e78b9f21e",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f511c02a-eca7-44f1-bf02-ca61d2b49c3f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d607fcb9-6e83-4c7e-a4a1-5fd5ba31dd0f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "e35955cb-2ed2-4081-a7d4-1d3a4f535317",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "12c6b0cc-85e5-45e1-8b8a-73945590b30d",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bb81b38a-29da-479c-b866-06ec6b730e2b",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboardpress",
                    "id": "f96fa434-c85b-4dd7-8c7e-f03a6dbaa47b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f17bd168-a207-46ba-81f1-99344727be4a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "411c9d37-d8ce-46a9-ba5c-8546bc6c4550",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "b284c3df-55dc-47c0-8072-f187480dfe8c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "884ac665-e597-4299-9046-f7b4bf4f5d28",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "adb67cae-8e88-45b6-b7a0-e41f42f0b243",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a86b5b1a-680b-420e-a9ab-448ab45c5773",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e3e99ae-7373-43e4-aa48-868dc5cc217e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbb65744-9c2b-4d08-a5ba-9c6921acc5aa",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dd2e1b5-c7c9-42f9-8fac-c453643ca5e1",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseInput",
            "id": "9c314b70-1765-4e64-9550-518dca5f2853",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2c8df1d4-322b-43f3-a107-9930c7c5e63a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "select",
                    "type": "Button",
                    "id": "6488f2ac-74ab-4824-ac2b-87175d0d74bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "518a9dc6-941b-48df-8d28-26a28d855936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd13d512-2dce-4290-8d95-2bc2cb6bc524",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "464c2543-71ac-4ec7-bd31-c6436085bcd8",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a42d1870-af99-4be3-ad27-7f5f36c07c48",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fe69dd8-1ebe-4bbe-99c5-a4d053914672",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "507d0241-bf56-4d66-a133-6341c4c32ec9",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0e10d21-58ca-4132-928e-aba887d005c3",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}